amf-client/shared/src/test/resources/parser-results/error/unexpected-nodes.raml
#%RAML 1.0
title:
    invalid: title
description: [ invalid ]
protocols:
    invalid: http
securedBy: oauth